argocd/services/socat/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socat
  labels:
    app: socat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socat
  template:
    metadata:
      labels:
        app: socat
    spec:
      containers:
        - name: socat
          image: alpine/socat:1.8.0.3
          args:
            - "-d"
            - "TCP4-LISTEN:4000,fork,reuseaddr"
            - "TCP4:host.docker.internal:4000"
          ports:
            - name: socat
              containerPort: 4000
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
