argocd/services/socat/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socat
spec:
  selector:
    app: socat
  ports:
    - protocol: TCP
      port: 4000
